5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1575_1559.log
== TEST (2019-03-12 18:38:24) 
-- CODE:
frase = " ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA"
print(frase.???)
-- ERROR:
File "XXXX", line 2
    print(frase.???)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 18:39:06) 
-- CODE:
frase = (" ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA")
print(frase.)
-- ERROR:
File "XXXX", line 2
    print(frase.)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 18:39:32) 
-- CODE:
frase = (" ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA")
print(" ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA")
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 18:39:35) 
-- CODE:
frase = (" ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA")
print(" ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA")
-- EXECUTION TIME:
0.178907
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 18:39:50) 
-- CODE:
frase = (" ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA")
print(" ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA")
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 18:39:59) 
-- CODE:
frase = (" ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA")
print(" ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA")
-- EXECUTION TIME:
0.146697
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 18:40:19) 
-- CODE:
frase = (" ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA")
print(" ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.")
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 18:40:25) 
-- CODE:
frase = (" ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA")
print(" ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.")
-- EXECUTION TIME:
0.150798
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
